--- a/app/src/main/res/layout/activity_home_year.xml
+++ b/app/src/main/res/layout/activity_home_year.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/home_drawer_layout"
-    android:background="#f2efe8">
+    android:background="@drawable/main_visiblity">
 
     <RelativeLayout
         android:id="@+id/home"
@@ -24,36 +24,45 @@
 <LinearLayout
     android:layout_below="@id/home_page_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+
+                android:id="@+id/first_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:clickable="true"
-                    android:id="@+id/planone"
-                    android:layout_width="360dp"
-                    android:layout_height="190dp"
+                    android:id="@+id/sem1"
+                    android:layout_width="350dp"
+                    android:layout_height="180dp"
                     android:layout_margin="12dp"
                     app:cardElevation="6dp"
                     app:cardBackgroundColor="#FF9800">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/semesterbackground">
+
+                    </ImageView>
 
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="118dp"
                         android:text="SEMESTER"
                         android:textColor="#fff"
                         android:textSize="40sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="110dp"
-                        android:layout_marginTop="110dp">
+                        android:textStyle="bold">
 
                     </TextView>
 
@@ -63,8 +72,8 @@
                         android:text="I"
                         android:textColor="#fff"
                         android:textSize="80sp"
-                        android:layout_marginStart="310dp"
-                        android:layout_marginTop="78dp">
+                        android:layout_marginStart="212dp"
+                        android:layout_marginTop="90dp">
 
                     </TextView>
 
@@ -73,15 +82,24 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="23dp">
+                    android:layout_marginStart="40dp">
 
                 <androidx.cardview.widget.CardView
                     android:clickable="true"
-                    android:layout_width="360dp"
-                    android:layout_height="190dp"
+                    android:id="@+id/sem2"
+                    android:layout_width="350dp"
+                    android:layout_height="178dp"
                     android:layout_margin="12dp"
                     app:cardElevation="6dp"
-                    app:cardBackgroundColor="#FF9800">
+                    app:cardBackgroundColor="#CF1616">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/back5">
+
+                    </ImageView>
+
 
 
                     <TextView
@@ -91,8 +109,8 @@
                         android:textColor="#fff"
                         android:textSize="40sp"
                         android:textStyle="bold"
-                        android:layout_marginStart="110dp"
-                        android:layout_marginTop="110dp">
+                        android:layout_marginStart="105dp"
+                        android:layout_marginTop="120dp">
 
                     </TextView>
 
@@ -102,20 +120,227 @@
                         android:text="II"
                         android:textColor="#fff"
                         android:textSize="80sp"
-                        android:layout_marginStart="310dp"
-                        android:layout_marginTop="78dp">
+                        android:layout_marginStart="305dp"
+                        android:layout_marginTop="88dp">
 
                     </TextView>
 
                 </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:clickable="true"
+                        android:id="@+id/sem3"
+                        android:layout_width="346dp"
+                        android:layout_height="180dp"
+                        android:layout_margin="12dp"
+                        app:cardElevation="6dp"
+                        app:cardBackgroundColor="#3F51B5">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/back6">
+
+                        </ImageView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="SEMESTER"
+                            android:textColor="#fff"
+                            android:textSize="40sp"
+                            android:textStyle="bold"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="118dp">
+
+                        </TextView>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="III"
+                            android:textColor="#fff"
+                            android:textSize="80sp"
+                            android:layout_marginStart="212dp"
+                            android:layout_marginTop="90dp">
+
+                        </TextView>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:clickable="true"
+                            android:id="@+id/sem4"
+                            android:layout_width="350dp"
+                            android:layout_height="180dp"
+                            android:layout_margin="12dp"
+                            app:cardElevation="6dp"
+                            app:cardBackgroundColor="#4CAF50">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/back10">
+
+                            </ImageView>
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="SEMESTER"
+                                android:textColor="#fff"
+                                android:textSize="40sp"
+                                android:textStyle="bold"
+                                android:layout_marginStart="90dp"
+                                android:layout_marginTop="120dp">
+
+                            </TextView>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="IV"
+                                android:textColor="#fff"
+                                android:textSize="80sp"
+                                android:layout_marginStart="280dp"
+                                android:layout_marginTop="88dp">
+
+                            </TextView>
+
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <androidx.cardview.widget.CardView
+                        android:clickable="true"
+                        android:id="@+id/sem5"
+                        android:layout_width="350dp"
+                        android:layout_height="180dp"
+                        android:layout_margin="12dp"
+                        app:cardElevation="6dp"
+                        app:cardBackgroundColor="#F4511E">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/semesterbackground">
+
+                        </ImageView>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="SEMESTER"
+                            android:textColor="#fff"
+                            android:textSize="40sp"
+                            android:textStyle="bold"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="118dp">
+
+                        </TextView>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="V"
+                            android:textColor="#fff"
+                            android:textSize="80sp"
+                            android:layout_marginStart="212dp"
+                            android:layout_marginTop="90dp">
+
+                        </TextView>
+
+                    </androidx.cardview.widget.CardView>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="40dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:clickable="true"
+                            android:id="@+id/sem6"
+                            android:layout_width="350dp"
+                            android:layout_height="180dp"
+                            android:layout_margin="12dp"
+                            app:cardElevation="6dp"
+                            app:cardBackgroundColor="#475353">
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:src="@drawable/back5">
+
+                            </ImageView>
+
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="SEMESTER"
+                                android:textColor="#fff"
+                                android:textSize="40sp"
+                                android:textStyle="bold"
+                                android:layout_marginStart="90dp"
+                                android:layout_marginTop="120dp"
+                                >
+
+                            </TextView>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="VI"
+                                android:textColor="#fff"
+                                android:textSize="80sp"
+                                android:layout_marginStart="280dp"
+                                android:layout_marginTop="88dp">
+
+                            </TextView>
+
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
+
+
+
         </ScrollView>
+
+
+
 </LinearLayout>
+
+
     </RelativeLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
