--- a/app/src/main/res/layout/activity_add_video_lec.xml
+++ b/app/src/main/res/layout/activity_add_video_lec.xml
@@ -41,13 +41,24 @@
         android:elevation="15dp"/>
 
     <EditText
-        android:id="@+id/uploadVideoDescription"
+        android:id="@+id/uploadVideoTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/uploadVideoSelectButton"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:hint="Short description about video."/>
+        android:hint="Short description about video."
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/uploadVideoDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/uploadVideoTitle"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:hint="Short description about video."
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/uploadVideoSubject"
@@ -56,7 +67,8 @@
         android:layout_below="@id/uploadVideoDescription"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:hint="Subject of Lecture"/>
+        android:hint="Subject of Lecture"
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:id="@+id/uploadVideoButton"
@@ -67,7 +79,7 @@
         android:paddingStart="25dp"
         android:paddingEnd="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:gravity="center"
         android:elevation="15dp"/>
 
