--- a/app/src/main/res/layout/activity_video_lectures.xml
+++ b/app/src/main/res/layout/activity_video_lectures.xml
@@ -28,18 +28,11 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/videolectures_page_toolbar">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/videoRecView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent"/>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                </RelativeLayout>
-            </LinearLayout>
         </FrameLayout>
     </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
